@@ -1,3 +1,8 @@
+2008-04-24  Jakub Jelinek  <jakub@redhat.com>
+
+	PR target/36015
+	* gcc.dg/pr36015.c: New test.
+
 2008-04-23  Richard Guenther  <rguenther@suse.de>
 
 	PR middle-end/36021
